# docs/swagger.yaml
@@ -27,6 +27,21 @@ definitions:
         maxLength: 100
         type: string
     type: object
+  main.UserWithToken:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: integer
+      is_active:
+        type: boolean
+      token:
+        type: string
+      username:
+        type: string
+    type: object
   store.Comment:
     properties:
       content:
@@ -106,6 +121,8 @@ definitions:
         type: string
       id:
         type: integer
+      is_active:
+        type: boolean
       username:
         type: string
     type: object
@@ -139,7 +156,7 @@ paths:
         "201":
           description: 用户创建成功
           schema:
-            $ref: '#/definitions/store.User'
+            $ref: '#/definitions/main.UserWithToken'
         "400":
           description: 请求错误
           schema: {}
@@ -375,6 +392,31 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: 取消关注用户
+      tags:
+      - users
+  /users/activate/{token}:
+    put:
+      description: 通过token激活用户
+      parameters:
+      - description: token
+        in: path
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: 激活成功
+          schema:
+            type: string
+        "400":
+          description: 请求错误
+          schema: {}
+        "404":
+          description: 用户不存在
+          schema: {}
+      summary: 激活用户
       tags:
       - users
   /users/feed:
